# unumana

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
design/controller/: ideas.md  patterns.md  timeline model.md
src/: backend.rs  command.rs  controller.rs  fixed_keymap.rs  generic_keymap.rs  input.rs  keymap.rs  lib.rs  main.rs  setup.rs
src/backend/: buffer.rs  command.rs
src/controller/: controller_mode.rs  mod.rs  mode.rs
src/controller2/: err.rs  input_event.rs  mod.rs  pattern.rs  timeline.rs
src/controller2/pattern/: press.rs
src/frontend/: controller.rs  mod.rs
