[package]
name = "bokken"
authors = ["adsick"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
phf = { version = "0.9", features = ["macros"]} #I'm not sure if we will use it as documentation sucks and there are no examples


