[package]
name = "unumana"
authors = ["adsick"]
version = "0.1.0"
edition = "2018"

[dependencies]
# bevy = "0.8"
bimap = "0.6"
# I use workspaces so no need to recompile everything everytime
# to do like so you want to create a folder for your crates in 'bevy' crate
# root folder, and inside of bevy's Cargo.toml specify workspace member as
# yourfolder/*
# so I have bevy/adsick/unumana
# and in Cargo.toml of bevy crate i have:
# [workspace]
#   exclude = ["benches"]
#   members = ["crates/*", "examples/ios", "tools/ci", "adsick/*"]

# then just uncomment next line and comment or remove line 8
bevy = {path = "../../../bevy", features = ["wayland"]}
bevy_prototype_lyon = { path = "../../crates/bevy_prototype_lyon"}
